refactor(quality): clean up 18 Sonar maintainability smells